app/overlays/dev/patch-api-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: consul
spec:
  template:
    spec:
      containers:
        - name: api
