app/overlays/dev/patch-web-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: consul
spec:
  template:
    metadata:
      labels:
        tags.datadoghq.com/env: "dev"
        tags.datadoghq.com/version: "latest"
    spec:
      containers:
        - name: web
